src/objects/QPMS__Completed_Training__c.object
<CustomObject>
    <description>This Object is used to store the completed training junction records.</description>
    <fields>
        <fullName>QPMS__Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval Process Complete</description>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval Required</description>
        <inlineHelpText>Approval Required</inlineHelpText>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver 10</description>
        <inlineHelpText>Approver 10</inlineHelpText>
        <label>Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Completed_Trainings7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver 1</description>
        <inlineHelpText>Approver 1</inlineHelpText>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Completed_Trainings6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver 2</description>
        <inlineHelpText>Approver 2</inlineHelpText>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Completed_Trainings9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver</description>
        <inlineHelpText>Approver</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Completed_Trainings5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__AssessmentRequired__c</fullName>
        <formula>QPMS__Course__r.QPMS__Assessment_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Attendance__c</fullName>
        <description>This field is used to store the Attendance</description>
        <label>Attendance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Present</fullName>
                </value>
                <value>
                    <fullName>Absent</fullName>
                </value>
                <value>
                    <fullName>No Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Completed_Date__c</fullName>
        <description>This field is used to store completed date value.</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Completion_Period__c</fullName>
        <description>Completion Period</description>
        <inlineHelpText>Completion Period</inlineHelpText>
        <label>Completion Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ContentVersionId__c</fullName>
        <description>ContentVersionId</description>
        <inlineHelpText>ContentVersionId</inlineHelpText>
        <label>ContentVersionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CourseType__c</fullName>
        <formula>Text(QPMS__Course_Sessions__r.QPMS__Course__r.QPMS__Course_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CourseType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Name__c</fullName>
        <formula>QPMS__Course__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Owner__c</fullName>
        <formula>IF( NOT(ISBLANK( QPMS__Course__c )) , QPMS__Course__r.Owner:User.FirstName+&apos; &apos;+ QPMS__Course__r.Owner:User.LastName ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Session_Number__c</fullName>
        <formula>QPMS__Course_Sessions__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Session</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Session_Status__c</fullName>
        <description>This field is used to store the course session status value</description>
        <label>Training Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Withdraw</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Inprogress</fullName>
                </value>
                <value>
                    <fullName>In Session</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Pending Enrollment</fullName>
                </value>
                <value>
                    <fullName>Not Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Addressed Through Course</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Course_Sessions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This fields is used to store course session value</description>
        <label>Course Sessions</label>
        <referenceTo>QPMS__Course_Sessions__c</referenceTo>
        <relationshipLabel>Completed Trainings</relationshipLabel>
        <relationshipName>Completed_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Course_Title__c</fullName>
        <formula>QPMS__Course__r.QPMS__Course_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store course  value</description>
        <label>Course</label>
        <referenceTo>QPMS__Course__c</referenceTo>
        <relationshipLabel>Completed Trainings</relationshipLabel>
        <relationshipName>Completed_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CreatedBy_Training_Junction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CreatedBy Training Junction</description>
        <label>CreatedBy Training Junction</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Completed_Trainings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Created_Date_Training_Junction__c</fullName>
        <description>Created Date Training Junction</description>
        <label>Created Date Training Junction</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QPMS__Created_From__c</fullName>
        <label>Created From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Quicksearch</fullName>
                </value>
                <value>
                    <fullName>Course</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Doc_status__c</fullName>
        <description>Doc status</description>
        <inlineHelpText>Doc status</inlineHelpText>
        <label>Doc status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Viewed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Document_Name__c</fullName>
        <formula>IF(QPMS__Document__r.Name==&apos;&apos;, &apos;N/A&apos;, QPMS__Document__r.Name+&apos;(&apos; + QPMS__Document__r.QPMS__Current_Rev__c +&apos;)&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Revision__c</fullName>
        <formula>QPMS__Document__r.QPMS__Current_Rev__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Revision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Status__c</fullName>
        <formula>IF(Text(QPMS__Type__c)==&apos;Readandsignoff&apos;  , TEXT(QPMS__Document__r.QPMS__Status__c), IF(Text(QPMS__Type__c)==&apos;PersonprofileCoursesession&apos;,  TEXT(QPMS__Course__r.QPMS__Document_Profile__r.QPMS__Status__c) , &apos;&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Title__c</fullName>
        <formula>QPMS__Document__r.QPMS__Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store document value</description>
        <label>Document</label>
        <referenceTo>QPMS__Document_Profile__c</referenceTo>
        <relationshipLabel>Completed Trainings</relationshipLabel>
        <relationshipName>Completed_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__DueDate__c</fullName>
        <description>DueDate</description>
        <inlineHelpText>DueDate</inlineHelpText>
        <label>DueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Duration__c</fullName>
        <description>This field is used to store duration value</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__End_Date__c</fullName>
        <description>End Date</description>
        <inlineHelpText>End Date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>To make junction record unqiue</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>180</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Indexed_Type__c</fullName>
        <description>This field is used to store the type value</description>
        <externalId>true</externalId>
        <label>Indexed Type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initial Submitter</description>
        <inlineHelpText>Initial Submitter</inlineHelpText>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Completed_Trainings4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Internal_Trainer__c</fullName>
        <description>This field is used to store the user ids</description>
        <label>Internal Trainer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_ReEnrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is ReEnrolled</description>
        <inlineHelpText>Is ReEnrolled</inlineHelpText>
        <label>Is ReEnrolled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Job_Function_Names__c</fullName>
        <description>Job Function Names</description>
        <label>Job Function Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Job_Function_ids__c</fullName>
        <description>Job Function ids</description>
        <label>Job Function ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__LastModifiedBy_Training_Junction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LastModifiedBy_Training_Junction</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Completed_Trainings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__LastModified_By_Training_Junction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LastModified By Training Junction</description>
        <label>LastModified By Training Junction</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Completed_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Lastmodified_Date_Training_Junction__c</fullName>
        <description>Lastmodified Date Training Junction</description>
        <label>Lastmodified Date Training Junction</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QPMS__Logged_in_users__c</fullName>
        <formula>IF(QPMS__Person_Profile__r.QPMS__Reports_To__r.Id  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged in users</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__No_Of_jobfinctions__c</fullName>
        <description>No Of jobfinctions</description>
        <label>No Of jobfinctions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ObtainedPercentage__c</fullName>
        <description>ObtainedPercentage</description>
        <label>Obtained Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Id__c</fullName>
        <description>This field is used to store training junction id</description>
        <label>Parent Id</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Person_Profile_Login__c</fullName>
        <formula>QPMS__Person_Profile__r.QPMS__Person_Profile_Login__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Profile Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Person_Profile_Name__c</fullName>
        <formula>QPMS__Person_Profile__r.QPMS__First_Name__c &amp; &quot; &quot; &amp; QPMS__Person_Profile__r.QPMS__Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Person_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Profile</label>
        <referenceTo>QPMS__Person_Profile__c</referenceTo>
        <relationshipLabel>Completed Trainings</relationshipLabel>
        <relationshipName>Completed_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Refresher_Date__c</fullName>
        <description>Refresher date to create refresher records</description>
        <label>Refresher Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Refresher_Period_Days__c</fullName>
        <formula>IF( ISPICKVAL(QPMS__Type__c,&apos;ReadAndSignoff&apos;) , QPMS__Document__r.QPMS__Refresher_Interval__c , QPMS__Course__r.QPMS__Refresher_Period_Days__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refresher Period (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Reports_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reports To</description>
        <inlineHelpText>Reports To</inlineHelpText>
        <label>Reports To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Completed_Trainings3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Reset_Count__c</fullName>
        <description>Reset Count</description>
        <inlineHelpText>Reset Count</inlineHelpText>
        <label>Reset Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Result__c</fullName>
        <description>This field is used to store the result</description>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Session_Name__c</fullName>
        <description>Session Name</description>
        <label>Session Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <description>Signed Off Details</description>
        <inlineHelpText>Signed Off Details</inlineHelpText>
        <label>Signed Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Start_Date__c</fullName>
        <description>Start Date</description>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>This field is used to store the type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PersonProfileCourse</fullName>
                </value>
                <value>
                    <fullName>PersonProfileJobFunction</fullName>
                </value>
                <value>
                    <fullName>JobFunctionCourse</fullName>
                </value>
                <value>
                    <fullName>PersonProfileCourseSession</fullName>
                </value>
                <value>
                    <fullName>Department</fullName>
                </value>
                <value>
                    <fullName>EnrolledUser</fullName>
                </value>
                <value>
                    <fullName>InternalTrainer</fullName>
                </value>
                <value>
                    <fullName>Locations</fullName>
                </value>
                <value>
                    <fullName>Sites</fullName>
                </value>
                <value>
                    <fullName>ReportTo</fullName>
                </value>
                <value>
                    <fullName>CourseInJobFunction</fullName>
                </value>
                <value>
                    <fullName>JobFunctionCourseSession</fullName>
                </value>
                <value>
                    <fullName>CourseProfilePrerequisiteCourses</fullName>
                </value>
                <value>
                    <fullName>JobFunctionDocument</fullName>
                </value>
                <value>
                    <fullName>ReadAndSignoff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Completed Training</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTJ-{00000}</displayFormat>
        <label>Completed Training Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Completed Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>